--- a/Biblioteca/Biblioteca.Host/Views/Shared/_Layout.cshtml
+++ b/Biblioteca/Biblioteca.Host/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
+<body ng-app="BibliotecaPIVApp">
     <div class="container body-content">
         @RenderBody()
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/angular")
     @RenderSection("scripts", required: false)
 </body>
 </html>
